feat: findRecipeByCategory
