# src/controller/subcategory.controller.ts
@@ -6,5 +6,5 @@ export const SubcategoryController = (app: Application) => {
     const service = new SubcategoryService();
     let router = Router();
     router = commonController(app, service, router);
-    app.use('/categories/:id/subcategories', router);
+    app.use('/subcategories', router);
 };
